--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <title>Maria's Cleaning</title>
   </head>
-  <body style="margin:0;padding:0;">
-    <div id="app"></div>
+  <body style="margin:0;padding:0;height:100vh">
+    <div id="app" style"position:relative;"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
