--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Noticia+Text|Great+Vibes|Francois+One|Libre+Baskerville" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Francois+One|Open+Sans:800|Assistant:600" rel="stylesheet">
     <title>Maria's Cleaning</title>
   </head>
   <body style="margin:0;padding:0;height:100vh">
