--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Open+Sans:800|Assistant:600" rel="stylesheet">
-    <title>Maria's Cleaning</title>
+    <title>Pacific Cleaning Vancouver</title>
   </head>
   <body style="margin:0;padding:0;height:100vh">
     <div id="app" style"position:relative;"></div>
