Fixed no equal sign after style tag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>VanCleaning</title>
   </head>
   <body style="margin:0;padding:0;height:100vh">
-    <div id="app" style"position:relative;"></div>
+    <div id="app" style="position:relative;"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
